--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
 shamefully-hoist=true
-#home=https://registry.npmmirror.com/
-#registry=https://registry.npmmirror.com/
+home='https://registry.npmmirror.com/'
+registry='https://registry.npmmirror.com/'
 #phantomjs_cdnurl="http://cnpmjs.org/downloads"
-#electron_mirror="https://npm.taobao.org/mirrors/electron/"
+electron_mirror="https://npm.taobao.org/mirrors/electron/"
 #profiler_binary_host_mirror="https://npm.taobao.org/mirrors/node-inspector/"
 #chromedriver_cdnurl="https://cdn.npm.taobao.org/dist/chromedriver"
