--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "build:win":"pnpm run electron:build -- --win nsis"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "path": "^0.12.7",
     "vue": "^3.0.0"
   },
   "devDependencies": {
