--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
+    "electron:build": "vue-cli-service electron:build -p never",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "build:win":"pnpm run electron:build -- --win nsis --publish never"
+    "build:win":"pnpm run electron:build -- --win nsis"
   },
   "main": "background.js",
   "dependencies": {
