--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,8 +21,9 @@ jobs:
           node-version: '15.14.0'
           registry-url: 'https://registry.npmmirror.com/'
       - name: install pnpm
-        run: |
-          npm install -g pnpm
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.23.1
       - name: pnpm install
         run: |
           pnpm install
