--- a/.github/workflows/remote.yaml
+++ b/.github/workflows/remote.yaml
@@ -10,28 +10,31 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: checkout-main
-        uses: actions/checkout@v2
-        with:
-          ref: main
-      - name: install-nodejs
-        uses: actions/setup-node@v2
-        with:
-          node-version: '15.14.0'
-          registry-url: 'https://registry.npmmirror.com/'
-      - name: install pnpm
-        uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 6.23.1
-      - name: pnpm install
+      - name: Hello World
         run: |
-          pnpm install
-      - name: build-windows
-        run: |
-          pnpm run electron:build
-      - name: Upload file
-        uses: actions/upload-artifact@v2
-        with:
-          name: packs
-          path: |
-            ./dist_electron/*.exe
+          echo Hello World!
+      # - name: checkout-main
+      #   uses: actions/checkout@v2
+      #   with:
+      #     ref: main
+      # - name: install-nodejs
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '15.14.0'
+      #     registry-url: 'https://registry.npmmirror.com/'
+      # - name: install pnpm
+      #   uses: pnpm/action-setup@v2.0.1
+      #   with:
+      #     version: 6.23.1
+      # - name: pnpm install
+      #   run: |
+      #     pnpm install
+      # - name: build-windows
+      #   run: |
+      #     pnpm run electron:build
+      # - name: Upload file
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: packs
+      #     path: |
+      #       ./dist_electron/*.exe
