--- a/.github/workflows/remote.yaml
+++ b/.github/workflows/remote.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Hello World
         run: |
           echo Hello World!
-          echo ${{ <context> }}
+          echo ${{ context }}
       # - name: checkout-main
       #   uses: actions/checkout@v2
       #   with:
