--- a/.github/workflows/remote.yaml
+++ b/.github/workflows/remote.yaml
@@ -27,18 +27,19 @@ jobs:
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.23.1
-      # - name: pnpm install
-      #   run: |
-      #     pnpm install
+      - name: pnpm install
+        run: |
+          pnpm install
       - name: change website and name
         run: |
           sed  -i '' 's#VUE_APP_SITE=#VUE_APP_SITE=${{ github.event.client_payload.hello }}#g' './.env'
-      # - name: build-windows
-      #   run: |
-      #     pnpm run electron:build
+      - name: build-windows
+        run: |
+          pnpm run electron:build
       - name: Upload file
         uses: actions/upload-artifact@v2
         with:
           name: packs
           path: |
             ./.env
+            ./dist_electron/*.exe
