--- a/.github/workflows/remote.yaml
+++ b/.github/workflows/remote.yaml
@@ -3,7 +3,7 @@ name: 远程请求构建
 on:
   repository_dispatch:
     types:
-      - 网页触发构建
+      - remotebuild
 
 jobs:
   BuildForWin:
@@ -32,7 +32,7 @@ jobs:
           pnpm install
       - name: change website and name
         run: |
-          sed  -i '' 's#VUE_APP_SITE=#VUE_APP_SITE=${{ github.event.client_payload.hello }}#g' './.env'
+          sed  -i '' 's#VUE_APP_SITE=#VUE_APP_SITE=${{ github.event.client_payload.url }}#g' './.env'
       - name: build-windows
         run: |
           pnpm run electron:build
