--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -49,7 +49,7 @@ jobs:
           # Optional (recommended) mail server password:
           password: ${{secrets.EMAILPASSWORD1}}
           # Required mail subject:
-          subject: 打包好的程序
+          subject: 你的应用已打包完成
           # Required recipients' addresses:
           to: ${{ github.event.client_payload.mail }}
           # Required sender full name (address can be skipped):
@@ -57,7 +57,7 @@ jobs:
           # Optional whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Optional plain body:
-          body: 您好，您的应用已经打包成功，解压附件查看，如有其他需求可回复本邮件
+          body: 您好，您的应用已经打包成功，前往github查看构建记录，如有其他需求可回复本邮件
           # Optional unsigned/invalid certificates allowance:
           ignore_cert: true
           # Optional attachments:
